--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "yarn add run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://github.com/ThanhPhat2001/Mini-Project_Weather-App.git",
+  "homepage": "https://github.com/ThanhPhat2001/Weather-Project.git",
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.1",
